--- a/public/css/my.css
+++ b/public/css/my.css
@@ -5,7 +5,8 @@
 .ck-content ul { list-style: disc; margin-left: 1rem; }
 .ck-content ol { list-style: decimal; margin-left: 1rem; }
 .ck-content a { color: #0066cc; text-decoration: underline; }
-.ck-content img { width: 50%; }
+.ck-content figure.image {width: 24rem; height: 24rem; overflow: hidden; display: inline-block;}
+.ck-content img { min-width: 24rem; min-height: 24rem;}
 .ck-editor__editable_inline {
     min-height: 300px;
 }
@@ -58,14 +59,69 @@
     z-index: 5;
 }
 
+.blog-content figure.image {
+    width: 20rem;
+    height: 20rem;
+}
+
+.blog-content figure.image p {
+    padding: 6rem 0;
+}
+
+.blog-content img {
+    min-width: 20rem;
+    min-height: 20rem;
+    object-fit: cover;
+}
+
+
 @media screen and (max-width: 900px) {
     .parallax {
         background-position: 65% 50%;
     }
+
+    .blog-content figure.image {
+        width: 16rem;
+        height: 16rem;
+    }
+
+    .blog-content figure.image div {
+        width: 16rem;
+        height: 16rem;
+    }
+
+    .blog-content figure.image p {
+        padding: 3rem 0;
+    }
+    
+    .blog-content img {
+        min-width: 16rem;
+        min-height: 16rem;
+    }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
     .parallax {
         background-position: 70% 50%;
     }
+
+    .blog-content figure.image {
+        width: 40vw;
+        height: 40vw;
+    }
+
+    .blog-content figure.image div {
+        width: 40vw;
+        height: 40vw;
+    }
+
+    .blog-content figure.image p {
+        padding: 6vw 0;
+    }
+    
+    .blog-content img {
+        min-width: 40vw;
+        min-height: 40vw;
+    }
 }
+
